# quiz-master

./: .gitignore  README.md  main.py  overview.md  pyproject.toml  validate_html.py
accounts/: admin.py  forms.py  models.py  signals.py  views.py
accounts/migrations/: 0001_initial.py
docs/: diddy.md
quiz_platform/: asgi.py  settings.py  urls.py  wsgi.py
quizzes/: admin.py  forms.py  models.py  urls.py  views.py
quizzes/management/commands/: load_sample_data.py
quizzes/migrations/: 0001_initial.py
static/css/: style.css
static/js/: main.js
templates/: base.html
templates/accounts/: login.html  profile.html  register.html
templates/quizzes/: dashboard.html  home.html  leaderboard.html  question_confirm_delete.html  question_form.html  quiz_confirm_delete.html  quiz_detail.html  quiz_form.html  quiz_history.html  quiz_list.html  quiz_manage_questions.html  quiz_reports.html  quiz_result.html  quiz_take.html
utils/: run_django.sh
