[project]
name = "techniki-internetowe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.1",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "colorama>=0.4.6",
    "requests>=2.31.0",
]
